# 41068_SPR2024_BezoBots

./: .gitignore  CMakeLists.txt  README.md  package.xml
BezoBots_Main/: CMakeLists.txt  Doxyfile  index.dox  package.xml
BezoBots_Main/config/: gazebo_map_arguments.txt  nav2_params.yaml  rviz_config_SLO_3_2.rviz  rviz_config_SLO_3_5.rviz  turtlebot_cartographer_merged.rviz
BezoBots_Main/docs/html/: annotated.html  classSprint2-members.html  classSprint2.html  classSprint2__inherit__graph.map  classSprint2__inherit__graph.md5  classSprint3-members.html  classSprint3.html  classSprint3__inherit__graph.map  classSprint3__inherit__graph.md5  classes.html  classgazebo_1_1Obstacle1-members.html  classgazebo_1_1Obstacle1.html  classgazebo_1_1Obstacle1__coll__graph.md5  classgazebo_1_1Obstacle1__inherit__graph.map  classgazebo_1_1Obstacle2-members.html  classgazebo_1_1Obstacle2.html  classgazebo_1_1Obstacle2__inherit__graph.map  classgazebo_1_1Obstacle2__inherit__graph.md5  classgazebo_1_1Obstacles-members.html  classgazebo_1_1Obstacles.html  classgazebo_1_1Obstacles__coll__graph.map  classgazebo_1_1Obstacles__coll__graph.md5  dir_1ae4179d5e953611aae20c997279e02c.html  dir_597e8b500a1adb94059d56cfbaaba492.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_767849a94dbd0369603e5bc10167d68e.html  dir_81025302fd592f43a2d7c4fbb7eea7b8.html  dir_89f4a690b67c79b9c90cf50a8a91ef16.html  dir_8ccf746b75dd5ef3a3215d7724bf6a62.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  (+3 more)
BezoBots_Main/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
BezoBots_Main/docs/latex/: annotated.tex  classSprint2.tex  classSprint2__inherit__graph.md5  classSprint3.tex  classSprint3__coll__graph.md5  classgazebo_1_1Obstacle1.tex  classgazebo_1_1Obstacle1__coll__graph.md5  classgazebo_1_1Obstacle2.tex  classgazebo_1_1Obstacle2__coll__graph.md5  classgazebo_1_1Obstacles.tex  classgazebo_1_1Obstacles__inherit__graph.md5  hierarchy.tex  index.tex  refman.tex
BezoBots_Main/html/: index.html
BezoBots_Main/html/search/: pages_0.js
BezoBots_Main/include/: robo_navigaterobot.hpp  robo_s2.hpp  robo_s3.hpp
BezoBots_Main/latex/: refman.tex
BezoBots_Main/launch/: aws_world.launch.py  cartographer.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
BezoBots_Main/launch/Sprint2/: sprint2_slo_3_2.py  sprint2_slo_3_5_2.py
BezoBots_Main/launch/Sprint3/: sprint3_slo_3_2.py  sprint3_slo_3_5.py
BezoBots_Main/maps/cartographer_map/: gazebo_cartographer.pgm  gazebo_cartographer.yaml
BezoBots_Main/maps/gazebo_map/: map.bt  map.pcd  map.yaml  mapServerParams.yaml  map_binary.pgm
BezoBots_Main/models/Robo_Shelves/: model.config  model.sdf
BezoBots_Main/models/Robo_Shelves/meshes/: Robo shelves.dae  Robo shelves.stl
BezoBots_Main/src/: main.cpp  robo_navigaterobot.cpp  robo_s2.cpp  robo_s3.cpp
BezoBots_Main/urdf/: turtlebot3_waffle_pi.urdf
BezoBots_Main/worlds/: aws_v1.world
config/: ekf.yaml
include/: robo_s2.hpp
launch/Sprint2/: slo_3_5.py  slo_3_6.py
shelf_detector/: package.xml  setup.cfg  setup.py
shelf_detector/launch/: shelf_detector.launch.py
shelf_detector/shelf_detector/scripts/: shelf_detector.py  shelf_selector.py
sprint4_new/: CMakeLists.txt  package.xml
sprint4_new/launch/: sprint4_new.launch.py
sprint4_new/src/: sprint4_new.cpp
src/: main.cpp  robo_s2.cpp
turtlebot3_teleop_joystick/: package.xml  setup.cfg  setup.py
turtlebot3_teleop_joystick/turtlebot3_teleop_joystick/script/: teleop_joystick.py
