<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bezobots</name>
  <version>1.0.0</version>
  <description>Project Package for Team BezoBots for Robotics Studio 1 Spring 2024</description>
  <maintainer email="zahead.rashidi@student.uts.edu.au">Zahead Rashidi</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend> <!-- Add this for geometry message types -->
  <depend>sensor_msgs</depend> <!-- Add this for sensor message types -->
  <depend>nav_msgs</depend> <!-- Add this for navigation message types -->
  <depend>nav2_msgs</depend> 
  <depend>turtlebot3_navigation2</depend> <!-- Add this if you are using TurtleBot3 navigation -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>OpenCV</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
